// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <GameCard /> component unchanged 1`] = `
<div>
  <a
    href="/test-path"
  >
    <div
      class="flex justify-center border-black border-2 m-5 w-64 h-64"
    >
      <p
        class="self-center"
      >
        TestName
      </p>
    </div>
  </a>
</div>
`;

exports[`renders <GameCardsContainer /> component unchanged 1`] = `
<div>
  <div
    class="flex flex-row flex-wrap max-w-3xl mx-auto my-10 justify-center"
  >
    <a
      href="/this-merchant-life"
    >
      <div
        class="flex justify-center border-black border-2 m-5 w-64 h-64"
      >
        <p
          class="self-center"
        >
          This Merchant Life
        </p>
      </div>
    </a>
    <a
      href="/showrunner"
    >
      <div
        class="flex justify-center border-black border-2 m-5 w-64 h-64"
      >
        <p
          class="self-center"
        >
          Showrunner
        </p>
      </div>
    </a>
  </div>
</div>
`;

exports[`renders <SharedHead /> component unchanged 1`] = `<div />`;
